[package]
name = "ascii85"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"


edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
