[package]
name = "ascii85"
version = "0.1.0"
authors = ["Jonathan Nilsson <<l.a.jonathan.nilsson@gmail.com>"]
description = "A simple crate for decoding Adobe Ascii85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/JoNil/ascii85"
edition = "2018"
keywords = ["decode", "ascii85", "base85"]
categories = ["Encoding"]

[dependencies]
